--- a/assignment_1.ipynb
+++ b/assignment_1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "2d62b4f6",
    "metadata": {},
    "outputs": [
@@ -87,9 +87,434 @@
    "metadata": {},
    "source": [
     "5. Pick two or three variables and briefly analyze them\n",
-    "    - Is it a categorical or numeric variable?\n",
+    "    - Is it a categorical or numeric variable? \n",
     "    - How many missing values are there? (`df['var'].isna()` and `np.sum()`)\n",
     "    - If categorical, tabulate the values (`df['var'].value_counts()`) and if numeric, get a summary (`df['var'].describe()`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6d12a1e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "93191c9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>unitid</th>\n",
+       "      <th>chronname</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>level</th>\n",
+       "      <th>control</th>\n",
+       "      <th>basic</th>\n",
+       "      <th>hbcu</th>\n",
+       "      <th>flagship</th>\n",
+       "      <th>...</th>\n",
+       "      <th>vsa_grad_after6_transfer</th>\n",
+       "      <th>vsa_grad_elsewhere_after6_transfer</th>\n",
+       "      <th>vsa_enroll_after6_transfer</th>\n",
+       "      <th>vsa_enroll_elsewhere_after6_transfer</th>\n",
+       "      <th>similar</th>\n",
+       "      <th>state_sector_ct</th>\n",
+       "      <th>carnegie_ct</th>\n",
+       "      <th>counted_pct</th>\n",
+       "      <th>nicknames</th>\n",
+       "      <th>cohort_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>100654</td>\n",
+       "      <td>Alabama A&amp;M University</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Masters Colleges and Universities--larger prog...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.4</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>232937|100724|405997|113607|139533|144005|2285...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>386</td>\n",
+       "      <td>99.7|07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>882.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100663</td>\n",
+       "      <td>University of Alabama at Birmingham</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Research Universities--very high research acti...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>196060|180461|201885|145600|209542|236939|1268...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>106</td>\n",
+       "      <td>56.0|07</td>\n",
+       "      <td>UAB</td>\n",
+       "      <td>1376.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>100690</td>\n",
+       "      <td>Amridge University</td>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Private not-for-profit</td>\n",
+       "      <td>Baccalaureate Colleges--Arts &amp; Sciences</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>217925|441511|205124|247825|197647|221856|1353...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>252</td>\n",
+       "      <td>100.0|07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>100706</td>\n",
+       "      <td>University of Alabama at Huntsville</td>\n",
+       "      <td>Huntsville</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Research Universities--very high research acti...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>232186|133881|196103|196413|207388|171128|1900...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>106</td>\n",
+       "      <td>43.1|07</td>\n",
+       "      <td>UAH</td>\n",
+       "      <td>759.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>100724</td>\n",
+       "      <td>Alabama State University</td>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Masters Colleges and Universities--larger prog...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100654|232937|242617|243197|144005|241739|2354...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>386</td>\n",
+       "      <td>88.0|07</td>\n",
+       "      <td>ASU</td>\n",
+       "      <td>1351.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>100751</td>\n",
+       "      <td>University of Alabama at Tuscaloosa</td>\n",
+       "      <td>Tuscaloosa</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Research Universities--high research activity</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>...</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>183044|209551|240727|207388|178402|185828|2380...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>96</td>\n",
+       "      <td>75.9|07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4438.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>100760</td>\n",
+       "      <td>Central Alabama Community College</td>\n",
+       "      <td>Alexander City</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Associates--Public Rural-serving Medium</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>217712|227225|198491|175935|107460|206923|2407...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>289</td>\n",
+       "      <td>66.7|10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>594.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>100830</td>\n",
+       "      <td>Auburn University at Montgomery</td>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Masters Colleges and Universities--larger prog...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>229814|210429|160038|176965|169798|207263|1023...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>386</td>\n",
+       "      <td>43.8|07</td>\n",
+       "      <td>AUM</td>\n",
+       "      <td>536.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>100858</td>\n",
+       "      <td>Auburn University</td>\n",
+       "      <td>Auburn University</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Research Universities--high research activity</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>72.2</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>223232|204024|163268|165334|132903|171128|1961...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>96</td>\n",
+       "      <td>75.5|07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4165.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>100937</td>\n",
+       "      <td>Birmingham-Southern College</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4-year</td>\n",
+       "      <td>Private not-for-profit</td>\n",
+       "      <td>Baccalaureate Colleges--Arts &amp; Sciences</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>174747|153144|143084|152390|168591|199111|1406...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>252</td>\n",
+       "      <td>88.9|07</td>\n",
+       "      <td>BSC</td>\n",
+       "      <td>449.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 63 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  unitid                            chronname               city  \\\n",
+       "0      0  100654               Alabama A&M University             Normal   \n",
+       "1      1  100663  University of Alabama at Birmingham         Birmingham   \n",
+       "2      2  100690                   Amridge University         Montgomery   \n",
+       "3      3  100706  University of Alabama at Huntsville         Huntsville   \n",
+       "4      4  100724             Alabama State University         Montgomery   \n",
+       "5      5  100751  University of Alabama at Tuscaloosa         Tuscaloosa   \n",
+       "6      6  100760    Central Alabama Community College     Alexander City   \n",
+       "7      7  100830      Auburn University at Montgomery         Montgomery   \n",
+       "8      8  100858                    Auburn University  Auburn University   \n",
+       "9      9  100937          Birmingham-Southern College         Birmingham   \n",
+       "\n",
+       "     state   level                 control  \\\n",
+       "0  Alabama  4-year                  Public   \n",
+       "1  Alabama  4-year                  Public   \n",
+       "2  Alabama  4-year  Private not-for-profit   \n",
+       "3  Alabama  4-year                  Public   \n",
+       "4  Alabama  4-year                  Public   \n",
+       "5  Alabama  4-year                  Public   \n",
+       "6  Alabama  2-year                  Public   \n",
+       "7  Alabama  4-year                  Public   \n",
+       "8  Alabama  4-year                  Public   \n",
+       "9  Alabama  4-year  Private not-for-profit   \n",
+       "\n",
+       "                                               basic hbcu flagship  ...  \\\n",
+       "0  Masters Colleges and Universities--larger prog...    X      NaN  ...   \n",
+       "1  Research Universities--very high research acti...  NaN      NaN  ...   \n",
+       "2            Baccalaureate Colleges--Arts & Sciences  NaN      NaN  ...   \n",
+       "3  Research Universities--very high research acti...  NaN      NaN  ...   \n",
+       "4  Masters Colleges and Universities--larger prog...    X      NaN  ...   \n",
+       "5      Research Universities--high research activity  NaN        X  ...   \n",
+       "6            Associates--Public Rural-serving Medium  NaN      NaN  ...   \n",
+       "7  Masters Colleges and Universities--larger prog...  NaN      NaN  ...   \n",
+       "8      Research Universities--high research activity  NaN      NaN  ...   \n",
+       "9            Baccalaureate Colleges--Arts & Sciences  NaN      NaN  ...   \n",
+       "\n",
+       "   vsa_grad_after6_transfer  vsa_grad_elsewhere_after6_transfer  \\\n",
+       "0                      36.4                                 5.6   \n",
+       "1                       NaN                                 NaN   \n",
+       "2                       NaN                                 NaN   \n",
+       "3                       0.0                                 0.0   \n",
+       "4                       NaN                                 NaN   \n",
+       "5                      61.5                                 8.5   \n",
+       "6                       NaN                                 NaN   \n",
+       "7                       NaN                                 NaN   \n",
+       "8                      72.2                                 9.7   \n",
+       "9                       NaN                                 NaN   \n",
+       "\n",
+       "  vsa_enroll_after6_transfer  vsa_enroll_elsewhere_after6_transfer  \\\n",
+       "0                       17.2                                  11.1   \n",
+       "1                        NaN                                   NaN   \n",
+       "2                        NaN                                   NaN   \n",
+       "3                        0.0                                   0.0   \n",
+       "4                        NaN                                   NaN   \n",
+       "5                        6.3                                   5.5   \n",
+       "6                        NaN                                   NaN   \n",
+       "7                        NaN                                   NaN   \n",
+       "8                        2.0                                   4.6   \n",
+       "9                        NaN                                   NaN   \n",
+       "\n",
+       "                                             similar  state_sector_ct  \\\n",
+       "0  232937|100724|405997|113607|139533|144005|2285...               13   \n",
+       "1  196060|180461|201885|145600|209542|236939|1268...               13   \n",
+       "2  217925|441511|205124|247825|197647|221856|1353...               16   \n",
+       "3  232186|133881|196103|196413|207388|171128|1900...               13   \n",
+       "4  100654|232937|242617|243197|144005|241739|2354...               13   \n",
+       "5  183044|209551|240727|207388|178402|185828|2380...               13   \n",
+       "6  217712|227225|198491|175935|107460|206923|2407...               25   \n",
+       "7  229814|210429|160038|176965|169798|207263|1023...               13   \n",
+       "8  223232|204024|163268|165334|132903|171128|1961...               13   \n",
+       "9  174747|153144|143084|152390|168591|199111|1406...               16   \n",
+       "\n",
+       "   carnegie_ct  counted_pct  nicknames  cohort_size  \n",
+       "0          386      99.7|07        NaN        882.0  \n",
+       "1          106      56.0|07        UAB       1376.0  \n",
+       "2          252     100.0|07        NaN          3.0  \n",
+       "3          106      43.1|07        UAH        759.0  \n",
+       "4          386      88.0|07        ASU       1351.0  \n",
+       "5           96      75.9|07        NaN       4438.0  \n",
+       "6          289      66.7|10        NaN        594.0  \n",
+       "7          386      43.8|07        AUM        536.0  \n",
+       "8           96      75.5|07        NaN       4165.0  \n",
+       "9          252      88.9|07        BSC        449.0  \n",
+       "\n",
+       "[10 rows x 63 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data/college_completion.csv', sep=\",\", engine='c')\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9a43c737",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The variable chronname is a categorical varaible and has 0 missing values\n"
+     ]
+    }
+   ],
+   "source": [
+    "column = 'chronname'\n",
+    "blank = np.sum(df[column].isna())\n",
+    "print(f\"The variable {column} is a categorical varaible and has {blank} missing values\")"
    ]
   },
   {
