--- a/assignment_1.ipynb
+++ b/assignment_1.ipynb
@@ -518,11 +518,99 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c9868a0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chronname\n",
+      "Metro Business College             3\n",
+      "ITT Technical Institute-Madison    3\n",
+      "Anamarc College                    2\n",
+      "Alabama A&M University             1\n",
+      "Sisseton-Wahpeton College          1\n",
+      "                                  ..\n",
+      "Gogebic Community College          1\n",
+      "Grace Bible College                1\n",
+      "Cornerstone University             1\n",
+      "Grand Rapids Community College     1\n",
+      "Brown College-Brooklyn Center      1\n",
+      "Name: count, Length: 3793, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "chronname_counts = df[column].value_counts(dropna=False)\n",
+    "print(chronname_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6cd4e4c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The variable cohort_size is a numeric varaible and has 331 missing values\n"
+     ]
+    }
+   ],
+   "source": [
+    "column2 = 'cohort_size'\n",
+    "blank = np.sum(df[column2].isna())\n",
+    "print(f\"The variable {column2} is a numeric varaible and has {blank} missing values\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e07d2a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     3467.000000\n",
+      "mean       658.306028\n",
+      "std        961.782580\n",
+      "min          1.000000\n",
+      "25%        131.000000\n",
+      "50%        356.000000\n",
+      "75%        782.500000\n",
+      "max      16229.000000\n",
+      "Name: cohort_size, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "cohort_size_summary = (df[column2].describe())\n",
+    "print(cohort_size_summary)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dbf2318a",
    "metadata": {},
    "source": [
     "6. What are some questions and prediction tools you could create using these data? Who would the stakeholder be for that prediction tool? What practical or ethical questions would it create? What other data would you want, that are not available in your data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "354eab15",
+   "metadata": {},
+   "source": [
+    "With this data, one question that could be interesting is whether cohort size has meaningful correlation with graduation rates; in other words, if higher student cohorts increase a student's probability of graduation or decrease it. Another question that could be answered with this data is whether institution characteristics (public / private, research / liberal arts, etc.) individually impact student graduation outcomes i.e., do students in public universities have higher likelihood of graduating in 6 years than students in private universities? Further, do cohort size and governing status have a combined effect (interaction) on student outcomes than just cohort size or governing status alone?\n",
+    "\n",
+    "A stakeholder for such a prediction tool may be prospective applicants to these colleges, their parents, and/or private student loan lenders that are looking to price their loans such that they match interest rates with predicted graduation rate based on the factors in this data. It would also be helpful to have further data showing salary outcomes for graduates as well as porportion of majors in fields such as STEM, humanities, etc. to see if there is a relationship between what students study, where they study, and what they do after they graduate."
    ]
   },
   {
